# pdfanalyzer

./: README.md  pyproject.toml
pdfanalyzer/: __init__.py
